# wagtail-non-admin-draftail

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  local.sqlite  pyproject.toml  tox.ini
example/: forms.py  models.py  urls.py  views.py
example/migrations/: 0001_initial.py
example/templates/example/: example_base.html  form.html
example/tests/: conftest.py  test_draftail.py  test_e2e_document.py  test_e2e_embed.py  test_e2e_image.py  test_e2e_link.py
example/tests/seed/: example.txt
non_admin_draftail/: __init__.py  apps.py  conf.py  forms.py  urls.py  views.py  widgets.py
non_admin_draftail/static/non_admin_draftail/: draftail.css  draftail.css.map  draftail.js.map  modal-workflow.js
non_admin_draftail/static/non_admin_draftail/draftail/: draftail.css  draftail.css.map  draftail.js  draftail.js.map
non_admin_draftail/static/non_admin_draftail/fonts/: wagtail-font.css
non_admin_draftail/static/non_admin_draftail/js/: modal-workflow.js
non_admin_draftail/static_src/: README.md  package-lock.json  package.json
non_admin_draftail/static_src/src/: index.js
non_admin_draftail/static_src/src/components/Icon/: Icon.js
non_admin_draftail/static_src/src/sources/: LinkSource.js
non_admin_draftail/static_src/src/styles/: chooser.scss  editor.scss  icons.scss  modal.scss  styles.scss  tooltip.scss
non_admin_draftail/templates/non_admin_draftail/: _draftail_css.html  _draftail_js.html  _editor_js.html  draftail_media.html  modal_base.html
non_admin_draftail/templates/non_admin_draftail/document/: chooser.html  upload.html
non_admin_draftail/templates/non_admin_draftail/embed/: chooser.html
non_admin_draftail/templates/non_admin_draftail/image/: select_format.html  upload.html
non_admin_draftail/templates/non_admin_draftail/link/: _link_types.html  anchor_link.html  email_link.html  external_link.html  phone_link.html
non_admin_draftail/templates/non_admin_draftail/tags/: non_admin_draftail_strings.html
non_admin_draftail/templates/non_admin_draftail/widgets/: non_admin_draftail_rich_text_area.html
non_admin_draftail/templatetags/: non_admin_draftail_tags.py
non_admin_draftail/views/: document.py  embed.py  image.py  link.py
test_project/: settings.py  urls.py
wagtail_non_admin_draftail/: __init__.py  apps.py  conf.py  forms.py  urls.py  widgets.py
wagtail_non_admin_draftail/static/wagtail_non_admin_draftail/: draftail.css  draftail.css.map
wagtail_non_admin_draftail/static_src/: README.md  package.json
wagtail_non_admin_draftail/static_src/src/: index.scss
wagtail_non_admin_draftail/static_src/src/styles/: chooser.scss  modal.scss
wagtail_non_admin_draftail/templates/wagtail_non_admin_draftail/: _draftail_css.html  _draftail_js.html  draftail_media.html
wagtail_non_admin_draftail/views/: document.py  embed.py  image.py  link.py
(+17 files in other folders)
