[tool.poetry]
name = "non_admin_draftail"
version = "0.4.1"
description = "You can now use Wagtail Draftail editor on non-admin pages"
authors = ["Tim Kamanin <tim@timonweb.com>"]
license = "MIT"
homepage = "https://timonweb.com"
repository = "https://github.com/timonweb/non-admin-draftail"

[tool.poetry.dependencies]
python = "^3.7"
django = ">=2.2,<3.2"
wagtail = ">=2.8,<2.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
