[tool.poetry]
name = "non_admin_draftail"
version = "0.16.0"
description = "You can now use Wagtail Draftail editor on non-admin pages"
authors = ["Tim Kamanin <tim@timonweb.com>"]
license = "MIT"
homepage = "https://timonweb.com"
repository = "https://github.com/timonweb/non-admin-draftail"

[tool.poetry.dependencies]
python = "^3.7"
wagtail = ">=4.1"

[tool.poetry.dev-dependencies]
pytest-django = "^4.4.0"
pytest-playwright = "^0.2.2"
django-managepy-anywhere = "^2.0"
pytest-faker = "^2.0.0"
pytest-env = "^0.6.2"
pre-commit = "^2.21.0"
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_third_party = "django,wagtail,pytz,redis,requests,rest_framework"
